@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.831 2007-07-19 18:12:42 castaglia Exp $
+$Id: NEWS,v 1.832 2007-07-24 22:09:39 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -14,6 +14,8 @@ CVS
 - Bug 2944 - mod_sql_mysql fails to compile due to missing quotation.
 - Bug 2946 - Anonymous logins fail if the mod_facl module is enabled.
 - Bug 2947 - SIGBUS on Mac OS X when dynamically loading shared libs.
+- Bug 2950 - Hostname with multiple IP addresses might cause "ai_family not
+  supported" error if IPv6 support enabled.
 
 1.3.1rc3 - Released 04-Jul-2007
 --------------------------------
